# multiplayer-networking

./: .gitignore  CMakeLists.txt  Constants.h  FontManager.h  Game.cpp  Game.h  GameMessage.h  Input.h  Netcode.cpp  NetworkManager.cpp  NetworkManager.h  Player.cpp  Player.h  README.md  RenderSystem.h  main.cpp
Game/: Event.h  FontManager.cpp  GameClient.h  GameMessage.h  GameServer.h  GameSimulation.h  Player.cpp  Player.h  RenderSystem.h
Networking/: NetConnection.h  NetServer.cpp  NetServer.h
UI/: MenuUI.h
Utils/: Utils.h
common/: Constants.h  Logging.h  TSQueue.h  Utils.h  Vector2D.h  constants.h  thread_safe_queue.h  utils.h  vector_2d.h
game/: App.h  FontManager.h  FrameTimer.h  GameClient.h  GameMessage.h  GameServer.h  GameSimulation.h  InputSystem.h  Message.h  NetworkClient.h  NetworkServer.h  Player.cpp  Player.h  RenderSystem.h  StatsManager.h  TextureManager.h  event.h  font_manager.h  game_client.h  game_server.h  game_simulation.h  game_state.h  input_system.h  message.h  network_client.h  network_server.h  player.cpp  player.h  projectile.h  render_system.h  stats_manager.h  text.h  texture_manager.h
networking/: NetClient.h  NetConnection.cpp  NetConnection.h  NetMessages.h  NetServer.h  NetworkUtils.h  UDPClient.h  UDPServer.h  utils.h
networking/tcp/: TCPClient.cpp  TCPClient.h  TCPConnection.cpp  TCPConnection.h  TCPConnectionInterface.h  TCPListener.h  TCPListenerInterface.h  TCPMessage.h  TCPServer.cpp  TCPServer.h  tcp_connection.h  tcp_connection_interface.h  tcp_listener.h  tcp_listener_interface.h  tcp_message.h
networking/udp/: UDPClient.h  UDPMessage.h  UDPPacket.h  UDPServer.h  UDPTransport.h  UDPTransportInterface.h  udp_transport.h  udp_transport_interface.h
scripts/: reset_network.sh  setup_network.sh
src/: CMakeLists.txt  client.cpp  server.cpp
src/client/: cli.h  client.cpp
src/server/: cli.h  server.cpp
tests/: CMakeLists.txt  NetworkClientTest.cpp  NetworkServerTest.cpp  NetworkingTest.cpp  TCPConnectionTest.cpp  TCPNetworkingTest.cpp  TSQueueTest.cpp  TestUtils.h  UDPNetworkingTest.cpp  UDPTransportTest.cpp  network_client_test.cpp  network_server_test.cpp  tcp_connection_test.cpp  thread_safe_queue_test.cpp  udp_transport_test.cpp  utils.h
tests/utils/: MockTCPConnection.h  MockTCPListener.h  MockUDPTransport.h
ui/: Button.h  Text.h  TextField.h  button.h  text.h  text_field.h
